# fugu_configurations

./: .gitignore  CMakeLists.txt  fugu_configurations.ods  manifest.xml  package.xml
BB2_08S2C_25_0/: calibration_cylinder_water_left.yaml  params.yaml
BB2_08S2C_25_1/: params.yaml
BB2_08S2C_38_0/: calibration_cylinder_air_left.yaml  params.yaml
BB2_08S2C_38_1/: calibration_boxed_water_right.yaml  calibration_cylinder_air_right.yaml  params.yaml
ar_markers/: markers1_4x4  markers2_4x4  markers3_4x4  markers4_4x4  markers5_4x4
auv_control/: altitude_controller.yaml  auv_safety_manager.yaml  twist_controller.yaml
auv_framework/: auv_safety_manager.yaml  control_params.yaml  teleoperation_params.yaml
camera/: calibration_left.yaml  calibration_right.yaml  params.yaml
camera_comp_narrow/: calibration_cylinder_water_left.yaml  calibration_cylinder_water_right.yaml  calibration_left.yaml  calibration_right_cylinder_air.yaml  params.yaml
camera_comp_wide/: calibration_cylinder_water_right.yaml  params.yaml
camera_flex_narrow/: calibration_boxed_air_left.yaml  calibration_boxed_water_left.yaml  calibration_boxed_water_right.yaml  calibration_cylinder_air_left.yaml  calibration_left.yaml  calibration_left_boxed_water.yaml  calibration_right.yaml  calibration_right_boxed_air.yaml  calibration_right_boxed_water.yaml  params.yaml
camera_flex_wide/: calibration_boxed_air_left.yaml  calibration_boxed_air_right.yaml  calibration_boxed_water_left.yaml  calibration_left_boxed_water.yaml  calibration_right.yaml  calibration_right_boxed_water.yaml  params.yaml
(+145 files in other folders)
